<resources>
    <string name="app_name">极印</string>
    <string name="button">Button</string>
    <string name="textView">TextView</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="hiLogo">Hi&#160;Perhamer!</string>
    <string name="loginUserNameText">用户名</string>
    <string name="loginPassText">密码</string>
    <string name="loginUserNameInputPlace">请输入用户名/邮箱</string>
    <string name="loginPassInputPlace">请输入登录密码</string>
    <string name="loginBtn">登录</string>
    <string name="home">首页</string>
    <string name="home_me">我的</string>
</resources>
