<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/loginBackGroundColor"
        >

    <TextView
            android:id="@+id/hiLogo"
            android:layout_width="178dp"
            android:layout_height="40dp"
            android:text="@string/hiLogo"
            android:textColor="@color/PerColor"
            android:textSize="30sp"
            android:textStyle="italic"
            android:typeface="sans"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginTop="120dp"/>

    <Button
            android:text="@string/loginBtn"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:id="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassInput"
            app:layout_constraintVertical_bias="0.1"
            />

    <EditText
            android:layout_width="245dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginUserNameInput"
            app:layout_constraintBottom_toTopOf="@+id/loginPassInput"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@+id/hiLogo"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            style="@style/Widget.AppCompat.EditText"
            android:textAllCaps="false"
            tools:ignore="LabelFor"
            android:autofillHints=""
            android:hint="@string/loginUserNameInputPlace"/>

    <EditText
            android:layout_width="245dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginPassInput"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="LabelFor"
            android:autofillHints=""
            android:hint="@string/loginPassInputPlace"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>